# CodeSweeper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: deploys.yaml  lint.yaml  tests.yaml
codesweeper/: Cargo.toml
codesweeper-lib/: Cargo.toml
codesweeper-lib/src/: lib.rs
codesweeper-ui/: Cargo.toml
codesweeper-ui/src/: main.rs
codesweeper/src/: main.rs
src/: main.rs
