[package]
name = "codesweeper-lib"
version = "0.1.0"
authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
edition = "2018"
description = "Shared code lib for codesweeper and codesweeper-ui."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
