[package]
name = "codesweeper-ui"
version = "0.1.0"
authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
edition = "2018"

[dependencies]
druid = "0.6.0"
quote = "1.0.8"

# [dependencies.druid]
# path = "../../druid/druid"
# version = "*"

[dependencies.codesweeper-lib]
path = "../codesweeper-lib"
version = "*"