[package]
name = "codesweeper-ui"
version = "0.1.0"
authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
edition = "2018"

[dependencies]
druid = "0.6.0"

[dependencies.codesweeper-lib]
path = "../codesweeper-lib"
version = "*"

[profile.release]
incremental = false
lto = true
codegen-units = 1
opt-level = "z" 